--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
          </header>
         <nav>
             Navigation Area
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html"></a></li>
+                <li><a href="/conctact.html">Contact</a></li>
+                <li><a href="Https://google.com">Services</a></li>
+            </ul>
         </nav>
         <div>
             Main Content Area
