--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="UTF8">
-    <meta name="viewport"content="width=device-width,initial-scale=2.0">
+    <meta name="viewport" content="width=device-width,initial-scale=2.0">
     <title>Document</title>
 </head>
 
 <body>
     <div>
-         <header>
+        <header>
             <h1>Hello HTML101</h1>
-         </header>
+        </header>
         <nav>
             Navigation Area
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about.html"></a></li>
+                <li><a href="/about.html">About</a></li>
                 <li><a href="/conctact.html">Contact</a></li>
                 <li><a href="Https://google.com">Services</a></li>
             </ul>
@@ -46,5 +46,3 @@
         </footer>
 
     </div>
-
-    
