--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
             <p>This is a paragraph inside the mian content area.</p>
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
+            <h3>ตารางรายชื่อนักศึกษา</h3>
+            <img src="https://www.disney.co.th/movies/lilo-and-stitch" alt="รูปสติช">
+            <table border="1">
+                <head>
+                    <tr>
+                        <th>รหัสนักศึกษา</th>
+                        <th>ชื่อ-นามสกุล</th>
+                        <th>สาขา</th>
+                    </tr>
+                </head>
+                <tbody>
+                    <tr>
+                        <td>123456789</td>
+                        <td>นายสมชาย ใจ</td>
+                        <td>สาขาวิชาวิทยาการคอมพิวเตอร์ </td>
+                    </tr>
+                </tbody>
             <div>
                 <h3> ข่าว 1</h3>
                 <p>วันที่ dd/mm/yy</p>
