--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
             <h3>ตารางรายชื่อนักศึกษา</h3>
-            <img src="https://www.disney.co.th/movies/lilo-and-stitch" alt="รูปสติช">
+            <img src="https://lumiere-a.akamaihd.net/v1/images/p_liloandstitch_19752_2c5bc44e.jpeg" alt="รูปสติช" width="300">
+
             <table border="1">
                 <head>
                     <tr>
