--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
             <h3>ตารางรายชื่อนักศึกษา</h3>
-            <img src="https://lumiere-a.akamaihd.net/v1/images/p_liloandstitch_19752_2c5bc44e.jpeg" alt="รูปสติช" width="300">
+            <img src="https://lumiere-a.akamaihd.net/v1/images/p_liloandstitch_19752_2c5bc44e.jpeg" alt="รูปสติช" width="200">
 
             <table border="1">
                 <head>
@@ -38,11 +38,13 @@
                     </tr>
                 </head>
                 <tbody>
+                <head>
                     <tr>
                         <td>123456789</td>
-                        <td>นายสมชาย ใจ</td>
+                        <td>นายสมชาย ใจดี</td>
                         <td>สาขาวิชาวิทยาการคอมพิวเตอร์ </td>
                     </tr>
+                </head>
                 </tbody>
             <div>
                 <h3> ข่าว 1</h3>
