--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
             <h3>ตารางรายชื่อนักศึกษา</h3>
-            <img src="https://lumiere-a.akamaihd.net/v1/images/p_liloandstitch_19752_2c5bc44e.jpeg" alt="รูปสติช" width="200">
+            <img src="https://static.wikia.nocookie.net/stitchipediaalilostitch/images/9/9f/Stitch_-_%282025_Film%29.png/revision/latest/scale-to-width/360?cb=20250612213040" alt="รูปสติช" width="200">
 
             <table border="1">
                 <head>
