--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
             <h3>ตารางรายชื่อนักศึกษา</h3>
-            <img src="https://static.wikia.nocookie.net/stitchipediaalilostitch/images/9/9f/Stitch_-_%282025_Film%29.png/revision/latest/scale-to-width/360?cb=20250612213040" alt="รูปสติช" width="200">
+            <img src="https://i.abcnewsfe.com/a/4f51bfcc-a8f2-404c-a981-938083b91df4/stitch-1-ht-bb-241218_1734545516806_hpMain_1x1.jpg?w=608" alt="รูปสติช" width="200">
 
             <table border="1">
                 <head>
