--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-gray-100 text-gray-900 p-5">
     <div>
         <header>
             <h1>Hello HTML101</h1>
