--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF8">
-    <meta name="viewport" content="width=device-width,initial-scale=2.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximun-scale=2.0, user-scale=no">
     <title>Document</title>
 </head>
 
@@ -13,7 +13,6 @@
             <h1>Hello HTML101</h1>
         </header>
         <nav>
-            Navigation Area
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -22,15 +21,15 @@
             </ul>
         </nav>
         <div>
-            Main Content Area
+            Hi
             <p>This is a paragraph inside the mian content area.</p>
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
-            <h3>ตารางรายชื่อนักศึกษา</h3>
             <img src="https://i.abcnewsfe.com/a/4f51bfcc-a8f2-404c-a981-938083b91df4/stitch-1-ht-bb-241218_1734545516806_hpMain_1x1.jpg?w=608" alt="รูปสติช" width="200">
+            <h3>ตารางรายชื่อนักศึกษา</h3>
 
             <table border="1">
-                <head>
+                </head>
                     <tr>
                         <th>รหัสนักศึกษา</th>
                         <th>ชื่อ-นามสกุล</th>
@@ -46,6 +45,7 @@
                     </tr>
                 </head>
                 </tbody>
+            <h3>ข่าวสาร </h3>
             <div>
                 <h3> ข่าว 1</h3>
                 <p>วันที่ dd/mm/yy</p>
