--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+decorate and clean up
 <html lang="en">
 
 <head>
@@ -45,6 +46,7 @@
                     </tr>
                 </head>
                 </tbody>
+            </table>
             <h3>ข่าวสาร </h3>
             <div>
                 <h3> ข่าว 1</h3>
