--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ decorate and clean up
                         <td>นายสมชาย ใจดี</td>
                         <td>สาขาวิชาวิทยาการคอมพิวเตอร์ </td>
                     </tr>
+                    <tr>
+                        <td>987654321</td>
+                        <td>นางสาวสมหญิง ยิ้มเยอะ</td>
+                        <td>สาขาวิชาวิทยาการคอมพิวเตอร์ </td>
+                    </tr>
                 </head>
                 </tbody>
             </table>
