--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ decorate and clean up
 <head>
     <meta charset="UTF8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximun-scale=2.0, user-scale=no">
-    <title>Document</title>
+    <title>Hello HTML101</title>
 </head>
 
 <body class="bg-gray-100 text-gray-900 p-5">
