--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-decorate and clean up
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximun-scale=2.0, user-scale=no">
     <title>Hello HTML101</title>
+    <style>
+        body{
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: rgb(153, 199, 206);
+            color: #676666;
+
+            text-align: center;
+            font-size: 1.5em;
+        }
+    
 </head>
 
 <body class="bg-gray-100 text-gray-900 p-5">
