--- a/index.html
+++ b/index.html
@@ -5,18 +5,10 @@
     <meta charset="UTF8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximun-scale=2.0, user-scale=no">
     <title>Hello HTML101</title>
-    <style>
-        body{
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: rgb(153, 199, 206);
-            color: #676666;
-
-            text-align: center;
-            font-size: 1.5em;
-        }
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" herf="css/csmjustyle.css">
 </head>
 
 <body class="bg-gray-100 text-gray-900 p-5">
